# RivalsReplayManager

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  vcpkg.json
RivalsReplayManager/: CMakeLists.txt
RivalsReplayManager/src/: ReplayRecord.cpp  ReplayRecord.hpp  main.cpp
utf8help/: CMakeLists.txt
utf8help/utf8help/: utf8help.cpp  utf8help.hpp
